--- a/index.less
+++ b/index.less
@@ -470,6 +470,23 @@ header {
       box-shadow: black 0px 0px 3px;
       border-radius: 10px;
       max-width: 240px;
+      .tp2 {
+        position: relative;
+        margin: 10px;
+        display: none;
+      }
+      .tp2 img {
+        position: relative;
+        width: 120px;
+        border: 1px solid #ccc;
+      }
+      .tp2 > div:last-child {
+        position: absolute;
+        right: 6px;
+        top: 0;
+        cursor: pointer;
+        z-index: 99;
+      }
     }
     .right-addLayer > .int {
       position: absolute;
